# PassGen

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/passgen/: __init__.py  __main__.py  config.py  logger.py  main.py  password_generator.py  security.py  storage.py  utils.py
src/passgen/io/: file_ops.py  module_io.py
tests/: test_file_ops.py  test_module_io.py  test_password_generator.py  test_security.py  test_storage.py
