[build-system]
# we use setuptools as the build backend.
requiers = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'passgen'
version = '0.1.0'
description = 'A simple CLI password generator with JSON storage and logging.'
readme = 'README.md'
requiers-python = '>=3.11'

# project dependencies (external libraries)
dependencies = [
    'rich>=13.0.0',
]

# this makes `passgen` available as a command in the active environment.
[project.scripts]
passgen = 'passgen.main:run_app'

[tool.setuptools]
# we are using a src/ layout:
package-dir = {'' = 'src'}

[tool.setuptools.package.find]
where = ['src']